# log-viewer

./: .gitignore  README.md  index.html  package-lock.json  package.json  pyproject.toml  server.js  vite.config.js
server/: configManager.js  historyManager.js  index.js
server-flask/: run.py
server-flask/app/: __init__.py  app_types.py  logging_setup.py
server-flask/app/core/: paths.py
server-flask/app/routes/: __init__.py  active_file.py  (+5 more)
server-flask/config/: logging.yml
server-flask/utils/: __init__.py  launch_headless_chrome.py
server-node/cli/: parseArgs.js
server-node/managers/: logsManager.js  userConfigManager.js
server-node/routes/: historyRoutes.js
server-node/startup/: launchHeadlessChromeApp.js
server-node/utils/: pathUtils.js
server/managers/: userConfigManager.js
server/routes/: logsRoutes.js  sessionRoutes.js  userConfigRoutes.js
server/startup/: setupLogPath.js
src/: App.svelte  app.css  constants.js
src/api/: activeFile.js  columns.js  history.js  logs.js  sortingColumn.js
src/components/: ActiveCellPopup.svelte  AsctimeFilterButton.svelte  ClearTextFieldButton.svelte  FilterDropdown.svelte  Footer.svelte  Header.svelte  LevelnameFilterButton.svelte  SidePanel.svelte  TableCell.svelte  TextFilterButton.svelte
src/stores/: activeFileStore.js  appReadyStore.js  columnsStore.js  configStore.js  historyStore.js  logStore.js  logsStore.js  sessionStore.js  sortingStore.js  uiStore.js
src/utils/: dropdownHelpers.js  filterEngine.js  logEngine.js  logsEngine.js  logsParser.js  sessionHelpers.js  setupApp.js  uiHelpers.js
(+34 files in other folders)
