[tool.poetry]
name = "log-viewer-dev"
version = "0.1.0"
description = ""
authors = ["Jolan <jolan11.dubois@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
Flask = "^3.1.1"
python-json-logger = "^3.3.0"
PyYAML = "^6.0.2"
platformdirs = "^4.3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
